--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,19 @@ main {
   height: 700px;
 }
 
+::placeholder{
+  color: black;
+}
+
+input {
+  background: yellow;
+}
+
 .gameChoiceTitle {
   margin-top: 5%;
   font-weight: bold;
+  color: rgba(0,0,0,0.7) !important;
+
 }
 
 ul {
@@ -49,6 +59,7 @@ ul {
 .header {
   max-height: 130px;
 }
+
 /*****************************************/
 /************* Animations ****************/
 /******************************************/
@@ -94,6 +105,40 @@ ul {
   transform: translate(-50%, 30%);
   border-radius: 20px;
 }
+
+.gameDescriptionPopUp {
+  z-index: 2;
+  background-image: url("./Images/bubbles.jpg"); 
+  height: 750px;
+  margin-top: -10%;
+}
+
+.gameDescriptionContent{
+  background-color: #f19af3;
+  height: 420px;
+  margin: 0 auto;
+  top: 22%;
+}
+
+#gameDescriptionContent img {
+  width: 100%;
+  height: 150px;
+}
+
+.aboutGameContent {
+  text-align: center;
+  margin-top: -9%;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+
+.closeGameDescription span{
+    color: blue;
+    font-size: 4em;
+    padding-left: 25px;  
+}
+
 
 .quotes {
   margin-top: -12%;
@@ -231,6 +276,9 @@ ul {
   margin-bottom: 5%;
   outline-style: none;
   border: none;
+ -webkit-box-shadow: -3px 5px 10px rgba(0,0,0,0.5);
+  border-bottom: 1px solid rgba(0,0,0,0.5);
+  border-radius: 5px;
 }
 
 .plus {
@@ -263,6 +311,10 @@ ul {
     text-transform: uppercase;
     height: 5rem;
     font-size: 20px;
+    font-weight: bold;
+    -webkit-box-shadow: -3px 5px 10px rgba(0,0,0,0.7);
+    border-bottom: 1px solid rgba(0,0,0,0.5);
+    text-shadow: -3px 2px 3px rgba(0,0,0,0.3);
 }
 
 .hintBubble {
@@ -312,6 +364,7 @@ ul {
   margin-bottom: 30px;
   margin: 0 auto;
   margin-top: 2%;
+  margin-left: 60%;
 }
 
 .next span {
@@ -396,8 +449,7 @@ ul {
 }
 
 #buttonIsClicked, .characterIsSelected{
-  box-shadow: 1px 3px 15px 10px #1FFFCB;
-
+  box-shadow: 1px 3px 15px 10px #1FFFCB !important;
 }
 
 #operatorSpin {
@@ -408,13 +460,17 @@ ul {
 .characterIsSelected{
   padding-top: 15px;
   margin-bottom: 15px !important;
+  transition: transform 1s;
 }
 
+.characterIsSelected:hover{
+ transform: scale(1.1); 
+}
 
 .startGameButton {
   background-color: #1FFFCB;
   color: black;
-  border: 2px solid black;
+  border: 1px solid black;
   text-align: center;
   font-size: 30px;
   margin-top: 15%;
@@ -423,6 +479,9 @@ ul {
   border-radius: 70px;
   width: 300px;
   height: 80px;
+   -webkit-box-shadow: -3px 5px 10px rgba(0,0,0,0.5);
+  border-bottom: 1px solid black;
+  text-shadow: -3px 2px 3px rgba(0,0,0,0.3);
 }
 
 .startPageButton {
@@ -469,6 +528,8 @@ ul {
   line-height: 0;
   perspective: 400px;
   height: 5rem;
+   -webkit-box-shadow: -3px 5px 10px rgba(0,0,0,0.7);
+    border-bottom: 1px solid rgba(0,0,0,0.5);
 }
 
 .check input[type="checkbox"],
@@ -577,14 +638,30 @@ ul {
  #wrapper {
   color: #fffe01;
   border-radius: 35px;
-  width: 500px;
+  width: 570px;
   text-align: center;
   margin: 90px auto;
   padding: 20px 20px;
   background-color: rgba(0,0,0,0.6);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  font-weight: bold;
 }
+
+
+ #wrapperCorrect {
+  color: black;
+  border-radius: 35px;
+  width: 570px;
+  text-align: center;
+  margin: 90px auto;
+  padding: 20px 20px;
+  background-color: rgba(66,244,214,0.6);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); 
+}
+
+#equalCorrect, .operatorSignCorrect{
+  color: black;
+}
+
 #q {
   display: flex;
   align-items: center;
@@ -610,10 +687,11 @@ ul {
   color: #00ff0c;
 }
 
+
 KEYFRAMES */
 @-webkit-keyframes animateBubble {
     0% {
-        margin-top: 500px;
+        margin-top: 0px;
     }
     100% {
         margin-top: -100%;
@@ -621,7 +699,7 @@ KEYFRAMES */
 }
 @-moz-keyframes animateBubble {
     0% {
-        margin-top: 500px;
+        margin-top: 0px;
     }
     100% {
         margin-top: -100%;
@@ -629,7 +707,7 @@ KEYFRAMES */
 }
 @keyframes animateBubble {
     0% {
-        margin-top: 500px;
+        margin-top: 0px;
     }
     100% {
         margin-top: -100%;
@@ -661,139 +739,159 @@ KEYFRAMES */
 }
 /* ANIMATIONS */
 .x1 {
-    -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 11s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 11s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 11s linear infinite, sideWays 2s ease-in-out infinite alternate;
   
-  left: -5%;
-  top: 5%;
+  left: 20%;
+  top: 85%;
   
   -webkit-transform: scale(0.6);
   -moz-transform: scale(0.6);
   transform: scale(0.6);
 }
 .x2 {
-    -webkit-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: animateBubble 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
   
   left: 5%;
-  top: 80%;
+  top: 30%;
   
-  -webkit-transform: scale(0.4);
-  -moz-transform: scale(0.4);
-  transform: scale(0.4);
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  transform: scale(0.8);
 }
 .x3 {
-    -webkit-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 13s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 13s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 13s linear infinite, sideWays 2s ease-in-out infinite alternate;
   
-  left: 10%;
-  top: 40%;
+  left: 58%;
+  top: 85%;
   
   -webkit-transform: scale(0.7);
   -moz-transform: scale(0.7);
   transform: scale(0.7);
 }
 .x4 {
-    -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
-  animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 15s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 15s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  animation: animateBubble 15s linear infinite, sideWays 3s ease-in-out infinite alternate;
   
-  left: 20%;
-  top: 0;
+  left: 46%;
+  top: 30%;
   
   -webkit-transform: scale(0.7);
   -moz-transform: scale(0.7);
   transform: scale(0.7);
 }
 .x5 {
-    -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 12s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 12s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: animateBubble 12s linear infinite, sideWays 4s ease-in-out infinite alternate;
   
-  left: 30%;
-  top: 50%;
+  left: 45%;
+  top: 75%;
   
-  -webkit-transform: scale(0.5);
-  -moz-transform: scale(0.5);
-  transform: scale(0.5);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  transform: scale(0.7);
 }
 .x6 {
-    -webkit-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 13s linear infinite, sideWays 6s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 13s linear infinite, sideWays 6s ease-in-out infinite alternate;
+  animation: animateBubble 13s linear infinite, sideWays 6s ease-in-out infinite alternate; 
   
-  left: 50%;
-  top: 0;
+  left: 75%;
+  top: 40%;
   
   -webkit-transform: scale(0.8);
   -moz-transform: scale(0.8);
   transform: scale(0.8);
 }
 .x7 {
-    -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+    -webkit-animation: animateBubble 15s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 15s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 15s linear infinite, sideWays 2s ease-in-out infinite alternate;
   
-  left: 65%;
-  top: 70%;
+  left: 35%;
+  top: 35%;
   
   -webkit-transform: scale(0.7);
   -moz-transform: scale(0.7);
   transform: scale(0.7);
 }
-.x8 {
-    -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
-  animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
-  
-  left: 80%;
-  top: 10%;
-  
-  -webkit-transform: scale(0.3);
-  -moz-transform: scale(0.3);
-  transform: scale(0.3);
-}
-.x9 {
-    -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
-  
-  left: 90%;
-  top: 50%;
-  
-  -webkit-transform: scale(0.6);
-  -moz-transform: scale(0.6);
-  transform: scale(0.6);
-}
-.x10 {
-    -webkit-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  -moz-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  
-  left: 80%;
-  top: 80%;
-  
-  -webkit-transform: scale(0.3);
-  -moz-transform: scale(0.3);
-  transform: scale(0.3);
-}
+
+
 
 .x1:focus, .x2:focus, .x3:focus, .x4:focus, .x5:focus, .x6:focus, .x7:focus, .x8:focus, .x9:focus, .x10:focus {
     outline-style: none;
 }
 /* OBJECTS */
 
-.bubble {
-  color: #f8f9fa;
-  background-color: rgba(247, 12, 214, 0.88);
+#bubble {
+  color: yellow;
+  padding: 10px;
+  background-color: rgba(252, 74, 216, 0.85);
   font-size:70px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-color: black;
   
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  
+  height: 200px;
+  position: absolute;
+  width: 200px;
+}
+#bubbleCorrect {
+  color: #42f4d9;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(0,0,0,0.68);
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  text-transform: uppercase;
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  z-index: 1;
+}
+
+#bubbleWrong {
+  color: white;
+  background-color: rgba(255, 0, 0, 0.76);
+  font-size: 70px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border: none;
+  outline: none;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(0, 0, 0, 0.4);
+  
+  height: 200px;
+  position: absolute;
+  width: 200px;
+}
+
+#bubbleDisapear {
+  color: transparent;
+  background-color: transparent;
+  font-size: 70px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border: none;
+  outline: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -804,16 +902,20 @@ KEYFRAMES */
 }
 
 
+
+
+
+
 /********************************************/
 /************* GameChoiceSection *************/
 /*******************************************/
+
 .operatorsWrapper {
   position: relative;
   padding-top: 5%;
   padding-bottom: 5%;
   background: linear-gradient(white, #FFC3FD, #4f00ff);
   height: 600px;
-  
 }
 
 
@@ -959,6 +1061,7 @@ KEYFRAMES */
   text-align: center;
   outline-style: none;
   margin-left: 55%;
+  background: #ffff00;
 }
 
 .jumpRopeAnswerButton {
@@ -994,20 +1097,21 @@ KEYFRAMES */
 .fullMathExpression {
     text-align: center;
     font-size: 2em;
-    background: white;
+    background: #42f4d9;
     height: 60px;
     border-radius: 20px;
     color: black;
     font-weight: bold; 
+    padding-top: 5px;
+    margin-left: 28%;
+    margin-bottom: -2px;
 }
 
-.operator {
-  color: rgba(241, 36, 135, 1);
+.fullMathExpressionDiv button{
+ margin-left: 81%;
+  margin-bottom: 10px;
 }
 
-.equalSign {
-  color: blue;
-}
 
 
 /**************************************/
@@ -1017,71 +1121,85 @@ KEYFRAMES */
 #dice {
   font-size: 8rem;
   padding: 0;
-  margin-left: 235px; 
-  color: yellow;   
+  color: white;  
+  padding-top: 61%; 
+  margin-bottom: -15%;
 }
 
 .diceGame {
   margin: 0 !important;
   text-align: center;
+  height: 450px;
+  margin-top: 7% !important;
+  margin-left: 5% !important;
+  margin-right: -3% !important;
  }
 
  .dice h2, .dice2 h2 {
-  margin-bottom: 20px;
+  margin-bottom: 15%;
+ }
+
+ .dice h2 span {
+  font-weight:  bold;
+  color: yellow;
+  margin-right: -11%;
+
  }
 
  .dice{
   text-align: center; 
   background-color: rgba(0,0,0,0.6);
   color: white !important;
-  padding-top: 5%;
+  padding-top: 4%;
   border-radius: 20px 0 0 20px;
+  padding-left: 50px !important;
  }
 
  .dice2 {
   text-align: center; 
   background-color: rgba(0,0,0,0.6);
   color: white !important;
-  padding-top: 5%;
+  padding-top: 4%;
   border-radius: 0 20px 20px 0;
+  padding-right: 50px !important;
  }
 
 .title {
   padding: 0;
   text-align: center;
-  margin-top: -6%;
+  margin-top: 1%;
+  
 }
 
 .title h1{
   background: #fc4ad8;
-  margin-bottom: 1.5%;
+  margin-bottom: -5%;
   padding: 10px;
   color: white;
   border-radius: 20px;
-  margin-left: 37%;
+  margin-left: 30%;
   font-weight: bold;
-  
+  text-shadow: -3px 5px 3px rgba(0,0,0,0.3);
 }
 
 .inputDice {
   font-size: 1.8em;
-  text-align: center; 
+  text-align: center;
+  width: 24%;
 }
 
 .operatorStyle {
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 2em;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 3em;
+  color: #00ff0c;
 }
 
 .operatorEquale{
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 2em;
-}
-
-.titleTotalDice {
-  font-size: 1.6em;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 3em;
+  color: #f70cd6;
 }
 
 .diceBtn{
@@ -1089,7 +1207,6 @@ KEYFRAMES */
   background: rgba(252, 74, 216, 1);  
   outline-style: none;
   color: white;
-  margin-top: 65%;
   height: 100px;
   width: 100px;
   font-size: 0.87em;
@@ -1097,11 +1214,16 @@ KEYFRAMES */
   font-weight: bold;
   border: 1.5px solid black;
   line-height: 15px;
+  margin-left: 100%;
 }
 
 .diceBtn i {
   margin-bottom: 5px;
   font-size: 2.3em;
+}
+
+.diceButtons {
+  background: rgba(0,0,0,0.6);
 }
 
 /*****************************************/
@@ -1118,24 +1240,57 @@ KEYFRAMES */
   border-radius: 20px;
   margin-left: 13% !important;
 }
-
 .dragBtn {
-  background-color: #f0027f;
+  background-color: #42f4d9;
   color: white;
+  font-weight: bold;
   width: 100%;
+  padding: 0;
+  border-radius: 5px;
+}
+.dropBox {
+  color: transparent;
+  width: 100%;
+  margin-bottom: 13px;
+  border-radius: 5px;
+  margin-left: -15px; 
+ 
+}   
+.dragBtn {
+  border: transparent;
+}
+#correctAnswerStyle{
+  background: #42f4d9 !important;
+  color: white;
+  font-weight: bold;
+  transition: all .2s ease-in-out;
+}
+#correctAnswerStyle:hover {
+ transform: scale(1.1); 
+}
+#wrongAnswerStyle {
+  background: red !important; 
+  color: transparent;
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+}
+#wrongAnswerStyle:before {
+  content: "X" !important;
+  padding-left: 20px;
+  color: white;
+  font-weight: bold;
+}
+
+.operatorEqualeDrop {
+  color: #f70cd6;
   padding: 0;
 }
 
-.dragAndDropExpression{
-  word-spacing: 5px;
+.operatorStyleDrop {
+  color: #00ff0c;
+  padding: 0;
 }
 
-.dropBox {
-  color: white;
-  width: 100%;
-  margin-bottom: 13px;
- 
-}   
+
 
 /*****************************************/
 /************* Characters *************/
@@ -1145,6 +1300,8 @@ KEYFRAMES */
   margin-bottom: 10%;
   margin: 0 auto;
   padding: 0 !important;
+  -webkit-box-shadow: -3px 7px 10px rgba(0,0,0,0.6);
+  border-bottom: 1px solid rgba(0,0,0,0.5);
 }
 
 .characterList img{
@@ -1155,11 +1312,12 @@ KEYFRAMES */
 .characterNames {
   font-size: 20px;
   font-weight: bold;
-  background-color: white;
   padding-top: 5%;
-  text-align: center;
+  text-align: center; 
+  background-color: white;
   min-height: 70px;
   height: 100%;
+  margin-bottom: -5px;
 }
 
 .characterName {
@@ -1244,6 +1402,7 @@ KEYFRAMES */
   color: white;
 }
 
+
 .FinishButtonCheck {
   position: relative;
   background: #fef896;
@@ -1251,6 +1410,8 @@ KEYFRAMES */
   perspective: 400px;
   height: 5rem;
   margin-top: 30px;
+  -webkit-box-shadow: -3px 5px 10px rgba(0,0,0,0.7);
+  border-bottom: 1px solid rgba(0,0,0,0.5);
 }
 
 .FinishButtonCheck input[type="checkbox"],
@@ -1282,7 +1443,7 @@ KEYFRAMES */
   width: 4.2rem;
   height: 4.2rem;
   top: .4rem;
-  left: .1rem;
+  left: .4rem;
   background: linear-gradient(45deg, #dedede, #ffffff);
   box-shadow: 0 6px 7px rgba(0,0,0,0.3);
   outline: none;
@@ -1301,8 +1462,8 @@ KEYFRAMES */
   content: "· ·";
   position: absolute;
   overflow: hidden;
-  left: 0.005rem;
-  top: 2.5rem;
+  left: 0.4rem;
+  top: 1.5rem;
   height: 1rem;
   letter-spacing: -.55rem;
   color: #9b9b9b;
@@ -1310,35 +1471,39 @@ KEYFRAMES */
   z-index: 2;
   font-size: 5rem;
   border-radius: 0;
-  transform-origin: 0 0 -.5rem;
+  transform-origin: 0 0 -0.5rem;
   backface-visibility: hidden;
+  line-height: 0.6rem;
+
 }
 
 .FinishButtonCheck label::after {
   content: "●";
-  top: 3.3rem;
-  left: 1.3rem;
-  height: 1.1rem;
+  top: 2.4rem;
+  left: 1rem;
+  height: 1.4rem;
   width: 1.95rem;
-  font-size: 1.2rem;
+  font-size: 3.5rem;
   transform-origin: 0 0 -.4rem;
 }
+
 
 .FinishButtonCheck input[type="checkbox"]:checked + label::before,
 .FinishButtonCheck input[type="checkbox"]:checked + label::after {
   left: 5.55rem;
-  top: 1.4rem;
-  line-height: 1.1rem;
+  top: 1.6rem;
+  line-height: 2.2rem;
   transform: rotateY(360deg);
 }
 
 .FinishButtonCheck input[type="checkbox"]:checked + label::after {
-  height: 2.8rem;
-  top: 2.60rem;
-  left: 6.3rem;
-  font-size: 3.65rem;
-  line-height: 0;
+  height: 1.5rem;
+  top: 3.2rem;
+  left: 7.3rem;
+  font-size: 1rem;
+  line-height: 0rem;
 }
+
 
 
 
