--- a/src/App.css
+++ b/src/App.css
@@ -127,16 +127,25 @@ ul {
 
 .aboutGameContent {
   text-align: center;
-  margin-top: -9%;
+  margin-top: -7%;
+  font-size: 1.8em;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.aboutGameContent h1{
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 7%;
   font-weight: bold;
-  font-size: 2em;
+  text-transform: uppercase;
 }
 
 
 .closeGameDescription span{
     color: blue;
     font-size: 4em;
-    padding-left: 25px;  
+    padding-left: 65px;  
 }
 
 
@@ -317,9 +326,13 @@ ul {
     text-shadow: -3px 2px 3px rgba(0,0,0,0.3);
 }
 
+.profileButton  {
+  margin-top: 3%;
+}
+
 .hintBubble {
   position: relative;
-      background: yellow;
+    background: yellow;
     border-radius: 20px;
     height: 100px;
     z-index: 2;
@@ -330,13 +343,14 @@ ul {
 .hintBubble p {
   font-size: 2em;
   text-align: center;
-  margin-top: -5%;
+  margin-top: -9%;
 }
 
 .closeHint {
   font-size: 2.5em;
   color: black;
   margin-left: 95%;
+  margin-top: -13%;
 }
 
 .hintBtnTitle {
@@ -1094,21 +1108,26 @@ KEYFRAMES */
   height: 60px;
 }
 
+.fullMathExpressionDiv {
+   margin-top: -6% !important;
+   z-index: 99 !important;
+}
+
 .fullMathExpression {
     text-align: center;
-    font-size: 2em;
+    font-size: 2.8em;
     background: #42f4d9;
-    height: 60px;
+    height: 80px;
+    padding: 5px;
     border-radius: 20px;
     color: black;
     font-weight: bold; 
-    padding-top: 5px;
-    margin-left: 28%;
-    margin-bottom: -2px;
+    margin-left: 20%;
+    margin-bottom: -2px; 
 }
 
 .fullMathExpressionDiv button{
- margin-left: 81%;
+  margin-left: 81%;
   margin-bottom: 10px;
 }
 
@@ -1134,15 +1153,18 @@ KEYFRAMES */
   margin-right: -3% !important;
  }
 
- .dice h2, .dice2 h2 {
-  margin-bottom: 15%;
+.diceGameResult {
+  height: 70px;
+  margin-left: 12% !important;
+  margin-bottom: 2%;
  }
 
- .dice h2 span {
-  font-weight:  bold;
+ .diceGameResult span {
+  font-weight: bold;
   color: yellow;
-  margin-right: -11%;
-
+  margin-left: 4% !important;
+  margin-top: -2%;
+  font-size: 2em;
  }
 
  .dice{
@@ -1228,20 +1250,49 @@ KEYFRAMES */
 .diceButtons h3 {
   color: white;
   font-weight: bold;
-  font-size: 2.4em;
-  margin-bottom: 3%;
+  font-size: 1.4em;
+  margin-bottom: 6%;
   margin-top: 32%;
   z-index: 2;
   height: 50px;
 }
 
-.diceShake {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both !important;
+#diceShake {
+  animation: spin 0.4s linear!important;
 }
+
+@-webkit-keyframes spin {
+   100%{
+    -webkit-transform: rotateZ(360deg);
+  } 
+}
+
+
 .correct {
   background: #fc4ad8;
 }
 
+#winnerAnimation {
+  transform: scale(1.3);
+  transition: all .2s ease-in-out;
+}
+
+#scoreStylePlayerOne, #scoreStylePlayerTwo {
+  font-size: 2.6em;
+  margin-left: 5% !important;
+  margin-top: -5%;
+  z-index: 10;
+}
+
+#scoreStyleNone{
+  font-size: 2em;
+  margin-left: 4% !important;
+  margin-top: -2%;
+}
+
+#shake {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+}
 /*****************************************/
 /************* DragAndDropGame *************/
 /******************************************/
